// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultiStepIndicator renders correctly > with className 1`] = `
<ol
  className="wrapper test"
  data-testid="multi-step-indicator"
>
  <li
    className="clickable indicator typePrimary statusFulfilled sizeRegular clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusFulfilledNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusFulfilledNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      />
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusFulfilledTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusFulfilledTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          fulfilled
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusFulfilledTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Title
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusFulfilledTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Subtitle
      </span>
    </div>
  </li>
  <div
    className="divider divider horizontal"
    data-testid="divider"
  />
  <li
    className="clickable indicator typePrimary statusActive sizeRegular clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusActiveNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusActiveNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      />
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusActiveTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusActiveTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          active
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusActiveTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Active
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusActiveTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Active Subtitle
      </span>
    </div>
  </li>
  <div
    className="divider divider horizontal"
    data-testid="divider"
  />
  <li
    className="clickable indicator typePrimary statusPending sizeRegular clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusPendingNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusPendingNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      />
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusPendingTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusPendingTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          pending
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusPendingTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Pending
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusPendingTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Pending Subtitle
      </span>
    </div>
  </li>
</ol>
`;

exports[`MultiStepIndicator renders correctly > with dividerComponentClassName 1`] = `
<ol
  className="wrapper"
  data-testid="multi-step-indicator"
>
  <li
    className="clickable indicator typePrimary statusFulfilled sizeRegular clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusFulfilledNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusFulfilledNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      />
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusFulfilledTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusFulfilledTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          fulfilled
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusFulfilledTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Title
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusFulfilledTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Subtitle
      </span>
    </div>
  </li>
  <div
    className="divider divider test horizontal"
    data-testid="divider"
  />
  <li
    className="clickable indicator typePrimary statusActive sizeRegular clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusActiveNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusActiveNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      />
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusActiveTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusActiveTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          active
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusActiveTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Active
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusActiveTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Active Subtitle
      </span>
    </div>
  </li>
  <div
    className="divider divider test horizontal"
    data-testid="divider"
  />
  <li
    className="clickable indicator typePrimary statusPending sizeRegular clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusPendingNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusPendingNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      />
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusPendingTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusPendingTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          pending
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusPendingTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Pending
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusPendingTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Pending Subtitle
      </span>
    </div>
  </li>
</ol>
`;

exports[`MultiStepIndicator renders correctly > with empty props 1`] = `
<ol
  className="wrapper"
  data-testid="multi-step-indicator"
/>
`;

exports[`MultiStepIndicator renders correctly > with fulfilledStepIcon 1`] = `
<ol
  className="wrapper"
  data-testid="multi-step-indicator"
>
  <li
    className="clickable indicator typePrimary statusFulfilled sizeRegular clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusFulfilledNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusFulfilledNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      />
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusFulfilledTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusFulfilledTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          fulfilled
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusFulfilledTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Title
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusFulfilledTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Subtitle
      </span>
    </div>
  </li>
  <div
    className="divider divider horizontal"
    data-testid="divider"
  />
  <li
    className="clickable indicator typePrimary statusActive sizeRegular clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusActiveNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusActiveNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      />
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusActiveTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusActiveTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          active
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusActiveTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Active
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusActiveTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Active Subtitle
      </span>
    </div>
  </li>
  <div
    className="divider divider horizontal"
    data-testid="divider"
  />
  <li
    className="clickable indicator typePrimary statusPending sizeRegular clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusPendingNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusPendingNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      />
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusPendingTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusPendingTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          pending
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusPendingTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Pending
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusPendingTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Pending Subtitle
      </span>
    </div>
  </li>
</ol>
`;

exports[`MultiStepIndicator renders correctly > with isFulfilledStepDisplayNumber 1`] = `
<ol
  className="wrapper"
  data-testid="multi-step-indicator"
>
  <li
    className="clickable indicator typePrimary statusFulfilled sizeRegular clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusFulfilledNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusFulfilledNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      />
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusFulfilledTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusFulfilledTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          fulfilled
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusFulfilledTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Title
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusFulfilledTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Subtitle
      </span>
    </div>
  </li>
  <div
    className="divider divider horizontal"
    data-testid="divider"
  />
  <li
    className="clickable indicator typePrimary statusActive sizeRegular clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusActiveNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusActiveNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      />
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusActiveTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusActiveTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          active
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusActiveTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Active
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusActiveTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Active Subtitle
      </span>
    </div>
  </li>
  <div
    className="divider divider horizontal"
    data-testid="divider"
  />
  <li
    className="clickable indicator typePrimary statusPending sizeRegular clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusPendingNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusPendingNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      />
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusPendingTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusPendingTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          pending
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusPendingTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Pending
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusPendingTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Pending Subtitle
      </span>
    </div>
  </li>
</ol>
`;

exports[`MultiStepIndicator renders correctly > with mode compact 1`] = `
<ol
  className="wrapper"
  data-testid="multi-step-indicator"
>
  <li
    className="clickable indicator typePrimary statusFulfilled sizeCompact clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusFulfilledNumberDividerContainer sizeCompactNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusFulfilledNumberContainer sizeCompactNumberContainer"
        role="button"
        tabIndex={0}
      />
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusFulfilledTextContainer sizeCompactTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusFulfilledTextContainerTitle sizeCompactTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          fulfilled
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusFulfilledTextContainerTitleText sizeCompactTextContainerTitleText"
        >
          Title
        </span>
      </div>
    </div>
  </li>
  <div
    className="divider divider compact horizontal"
    data-testid="divider"
  />
  <li
    className="clickable indicator typePrimary statusActive sizeCompact clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusActiveNumberDividerContainer sizeCompactNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusActiveNumberContainer sizeCompactNumberContainer"
        role="button"
        tabIndex={0}
      />
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusActiveTextContainer sizeCompactTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusActiveTextContainerTitle sizeCompactTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          active
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusActiveTextContainerTitleText sizeCompactTextContainerTitleText"
        >
          Active
        </span>
      </div>
    </div>
  </li>
  <div
    className="divider divider compact horizontal"
    data-testid="divider"
  />
  <li
    className="clickable indicator typePrimary statusPending sizeCompact clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusPendingNumberDividerContainer sizeCompactNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusPendingNumberContainer sizeCompactNumberContainer"
        role="button"
        tabIndex={0}
      />
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusPendingTextContainer sizeCompactTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusPendingTextContainerTitle sizeCompactTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          pending
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusPendingTextContainerTitleText sizeCompactTextContainerTitleText"
        >
          Pending
        </span>
      </div>
    </div>
  </li>
</ol>
`;

exports[`MultiStepIndicator renders correctly > with mode compact textPlacement vertical 1`] = `
<ol
  className="wrapper"
  data-testid="multi-step-indicator"
>
  <li
    className="clickable indicator typePrimary statusFulfilled sizeRegular clickable textPlacementVertical disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusFulfilledNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusFulfilledNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      />
      <div
        className="divider divider divider horizontal"
        data-testid="divider"
      />
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusFulfilledTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusFulfilledTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          fulfilled
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusFulfilledTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Title
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusFulfilledTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Subtitle
      </span>
    </div>
  </li>
  <li
    className="clickable indicator typePrimary statusActive sizeRegular clickable textPlacementVertical disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusActiveNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusActiveNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      />
      <div
        className="divider divider divider horizontal"
        data-testid="divider"
      />
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusActiveTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusActiveTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          active
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusActiveTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Active
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusActiveTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Active Subtitle
      </span>
    </div>
  </li>
  <li
    className="clickable indicator typePrimary statusPending sizeRegular clickable textPlacementVertical disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusPendingNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusPendingNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      />
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusPendingTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusPendingTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          pending
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusPendingTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Pending
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusPendingTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Pending Subtitle
      </span>
    </div>
  </li>
</ol>
`;

exports[`MultiStepIndicator renders correctly > with stepComponentClassName 1`] = `
<ol
  className="wrapper"
  data-testid="multi-step-indicator"
>
  <li
    className="clickable indicator typePrimary statusFulfilled sizeRegular test clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusFulfilledNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusFulfilledNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      />
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusFulfilledTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusFulfilledTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          fulfilled
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusFulfilledTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Title
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusFulfilledTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Subtitle
      </span>
    </div>
  </li>
  <div
    className="divider divider horizontal"
    data-testid="divider"
  />
  <li
    className="clickable indicator typePrimary statusActive sizeRegular test clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusActiveNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusActiveNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      />
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusActiveTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusActiveTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          active
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusActiveTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Active
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusActiveTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Active Subtitle
      </span>
    </div>
  </li>
  <div
    className="divider divider horizontal"
    data-testid="divider"
  />
  <li
    className="clickable indicator typePrimary statusPending sizeRegular test clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusPendingNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusPendingNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      />
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusPendingTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusPendingTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          pending
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusPendingTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Pending
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusPendingTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Pending Subtitle
      </span>
    </div>
  </li>
</ol>
`;

exports[`MultiStepIndicator renders correctly > with steps 1`] = `
<ol
  className="wrapper"
  data-testid="multi-step-indicator"
>
  <li
    className="clickable indicator typePrimary statusFulfilled sizeRegular clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusFulfilledNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusFulfilledNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      />
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusFulfilledTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusFulfilledTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          fulfilled
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusFulfilledTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Title
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusFulfilledTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Subtitle
      </span>
    </div>
  </li>
  <div
    className="divider divider horizontal"
    data-testid="divider"
  />
  <li
    className="clickable indicator typePrimary statusActive sizeRegular clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusActiveNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusActiveNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      />
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusActiveTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusActiveTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          active
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusActiveTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Active
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusActiveTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Active Subtitle
      </span>
    </div>
  </li>
  <div
    className="divider divider horizontal"
    data-testid="divider"
  />
  <li
    className="clickable indicator typePrimary statusPending sizeRegular clickable disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusPendingNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusPendingNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      />
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusPendingTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusPendingTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          pending
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusPendingTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Pending
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusPendingTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Pending Subtitle
      </span>
    </div>
  </li>
</ol>
`;

exports[`MultiStepIndicator renders correctly > with textPlacement vertical 1`] = `
<ol
  className="wrapper"
  data-testid="multi-step-indicator"
>
  <li
    className="clickable indicator typePrimary statusFulfilled sizeRegular clickable textPlacementVertical disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusFulfilledNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusFulfilledNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      />
      <div
        className="divider divider divider horizontal"
        data-testid="divider"
      />
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusFulfilledTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusFulfilledTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          fulfilled
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusFulfilledTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Title
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusFulfilledTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Subtitle
      </span>
    </div>
  </li>
  <li
    className="clickable indicator typePrimary statusActive sizeRegular clickable textPlacementVertical disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusActiveNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusActiveNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      />
      <div
        className="divider divider divider horizontal"
        data-testid="divider"
      />
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusActiveTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusActiveTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          active
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusActiveTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Active
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusActiveTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Active Subtitle
      </span>
    </div>
  </li>
  <li
    className="clickable indicator typePrimary statusPending sizeRegular clickable textPlacementVertical disableTextSelection"
    data-testid="step-indicator"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="numberDividerContainer typePrimaryNumberDividerContainer statusPendingNumberDividerContainer sizeRegularNumberDividerContainer"
    >
      <div
        className="numberContainer typePrimaryNumberContainer statusPendingNumberContainer sizeRegularNumberContainer"
        role="button"
        tabIndex={0}
      />
    </div>
    <div
      className="textContainer typePrimaryTextContainer statusPendingTextContainer sizeRegularTextContainer"
    >
      <div
        className="textContainerTitle typePrimaryTextContainerTitle statusPendingTextContainerTitle sizeRegularTextContainerTitle"
      >
        <span
          className="hiddenTextWrapper"
          data-testid="hidden-text_hiddenText"
          id="hiddenText"
        >
          pending
        </span>
         
        <span
          className="textContainerTitleText typePrimaryTextContainerTitleText statusPendingTextContainerTitleText sizeRegularTextContainerTitleText"
        >
          Pending
        </span>
      </div>
      <span
        className="textContainerSubtitleText typePrimaryTextContainerSubtitleText statusPendingTextContainerSubtitleText sizeRegularTextContainerSubtitleText"
      >
        Pending Subtitle
      </span>
    </div>
  </li>
</ol>
`;
